# wololo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.cursor/rules/: git.mdc
apps/: newsroom_app.py
docs/: _config.yml  de_bridge.md  index.md
docs/articles/: wololo_medium.md
scripts/: de_demo.py  newsroom_demo.py
src/wololo/: __init__.py  analysis.py
src/wololo/agents/: __init__.py  base.py  fake.py  filters.py  llm.py  mcp.py  ollama.py  tools.py
src/wololo/codec/: __init__.py  tauntcodec.py
src/wololo/orchestrator/: __init__.py  cli.py  harness.py  newsroom.py  newsstore.py  relic_front_page.py  scenarios.py  shipping.py  supervisor.py
src/wololo/substrate/: __init__.py  interface.py
src/wololo/substrate/de/: __init__.py  bridge.py  fakegame.py  locate.py  mailbox.py  protocol.py  xsdat.py
src/wololo/substrate/sim/: __init__.py  fog.py  kernel.py  market.py  relics.py  taunts.py  triggers.py
tests/: test_analysis.py  test_de_bridge.py  test_de_protocol.py  test_harness.py  test_kernel.py  test_llm_agent.py  test_llm_tools.py  test_mcp.py  test_newsroom.py  test_ollama.py  test_ollama_tools.py  test_relic_front_page.py  test_scenario_coop.py  test_scenario_llm.py  test_scenario_llm_tools.py  test_shipping.py  test_supervisor.py  test_tauntcodec.py
xs/: wololo.xs  wololo_probe.xs
