[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wololo"
version = "0.1.0"
description = "Agent orchestration framework coordinated exclusively through Age of Empires II mechanics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
wololo = "wololo.orchestrator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
llm = [
    "anthropic>=0.40",
]
ui = [
    "streamlit>=1.40",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
